src/styles/globals.scss
@import url('https://fonts.googleapis.com/css?family=IBM+Plex+Mono:400,700');
@import "color.scss";
@import "math.scss";
@import "markdown.scss";
@import "prismjs/plugins/command-line/prism-command-line.css";

$plex-mono: 'IBM Plex Mono';

html,
body {
  padding: 0;
  font-size: 1rem;
  line-height: 1.5rem;
  font-family:
    $plex-mono,
    -apple-system,
    BlinkMacSystemFont,
    Segoe UI,
    Roboto,
    Oxygen,
    Ubuntu,
    Cantarell,
    Fira Sans,
    Droid Sans,
    Helvetica Neue,
    sans-serif;
}

@media (prefers-color-scheme: dark) {
  html,
  body {
    background: $bg;
    color: $white;
  }
}

a {
  color: inherit;
  text-decoration: none;
}

ul {
  margin: 0;
  padding: 0;
}

ul li {
  list-style-type: none;
}

img {
  width: 100%;
  max-width: 100%;
}

blockquote {
  position: relative;
  margin: 0.1rem 0;
  color: lighten($black, 20%);
  border-left: 3px solid $gray;
  padding: 2rem 0 0.5rem 1rem;

  p {
    margin: 0;
  }

  &::before {
    font-size: 2.5em;
    content: "\"";
    color: $gray;
    font-weight: 900;
    position: absolute;
    top: 0.2em;
    left: 0.3em;
  }
}

hr {
  margin-top: 16px;
  border: 1px dotted $mos;
}

// h1 > a:hover .. h6 > a:hover
@for $i from 1 through 6 {
  h#{$i} > a:hover {
    text-decoration: underline;

    &::before {
      text-decoration: underline;
    }
  }

  h#{$i} > a::before {
    content: "#";
    display: inline-block;
    margin-right: 0.5rem;
  }
}

table {
  margin: 0 auto;

  thead {
    background-color: $mocha;
  }

  th,
  td {
    padding: 0.25rem 1rem;
  }
}

